--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Accidents de la route par département</h1>  
-    <div class="histo">histo</div>   
+    <div class="histo">
+        <div class="bar" style="width: 10%"></div>
+        <div class="bar" style="width: 30%"></div>
+        <div class="bar" style="width: 20%"></div>
+    </div>   
 </body>
 </html>
