--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <div class="bar" style="width: 10%"></div>
         <div class="bar" style="width: 30%"></div>
         <div class="bar" style="width: 20%"></div>
-    </div>   
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
