--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Accidents de la route par département</h1>  
     <div class="histo">
-        <div class="bar" style="width: 10%"></div>
-        <div class="bar" style="width: 30%"></div>
-        <div class="bar" style="width: 20%"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.js"></script>
     <script src="main.js"></script>
