--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,11 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
 </head>
 <body>
-    <h1>Accidents de la route par département</h1>  
+    <h1>Accidents de la route par département en 2017</h1>
+    <p>Source: Ministère de l'intérieur</p>
     <div class="histo">
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.js"></script>
+    <script src="../node_modules/d3/dist/d3.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
